Correction noted by bsb++
git-svn-id: http://svn.pugscode.org/pugs@23837 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -14,9 +14,9 @@ Allison Randal <al@shadowed.net>
    Maintainer: Patrick Michaud <pmichaud@pobox.com> and
                Larry Wall <larry@wall.org>
    Date: 24 Jun 2002
-   Last Modified: 17 Apr 2007
+   Last Modified: 27 Apr 2007
    Number: 5
-   Version: 57
+   Version: 58
 
 This document summarizes Apocalypse 5, which is about the new regex
 syntax.  We now try to call them I<regex> rather than "regular
@@ -375,6 +375,8 @@ With the new C<:ov> (C<:overlap>) modifier, the current regex will
 match at all possible character positions (including overlapping)
 and return all matches in a list context, or a disjunction of matches
 in a scalar context.  The first match at any position is returned.
+The matches are guaranteed to be returned in left-to-right order with
+respect to the starting positions.
 
      $str = "abracadabra";
 
@@ -384,13 +386,20 @@ in a scalar context.  The first match at any position is returned.
 
 =item *
 
-With the new C<:ex> (C<:exhaustive>) modifier, the current regex will match
-every possible way (including overlapping) and return all matches in a list
-context, or a disjunction of matches in a scalar context.
+With the new C<:ex> (C<:exhaustive>) modifier, the current regex will
+match every possible way (including overlapping) and return all matches
+in a list context, or a disjunction of matches in a scalar context.
+The matches are guaranteed to be returned in left-to-right order with
+respect to the starting positions.  The order within each starting
+position is not guaranteed and may depend on the nature of both the
+pattern and the matching engine.  (Conjecture: or we could enforce
+backtracking engine semantics.  Or we could guarantee no order at all
+unless the pattern starts with "::" or some such to suppress DFAish
+solutions.)
 
      $str = "abracadabra";
 
-     if $str ~~ m:exhaustive/ a (.*) a / {
+     if $str ~~ m:exhaustive/ a (.*?) a / {
          say "@()";    # br brac bracad bracadabr c cad cadabr d dabr br
      }
 
