--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -822,19 +822,19 @@ variable. A value type is given as a prefix or with the C<of> keyword:
 
 In either case this sets the C<of> property of the container to C<Dog>.
 
-Subroutines have a variant of the C<of> property, C<returns>, that sets
-the C<returns> property instead.  The C<returns> property specifies a
+Subroutines have a variant of the C<of> property, C<as>, that sets
+the C<as> property instead.  The C<as> property specifies a
 constraint (or perhaps coercion) to be enforced on the return value (either
 by explicit call to C<return> or by implicit fall-off-the-end return).
 This constraint, unlike the C<of> property, is not advertised as the
 type of the routine.  You can think of it as the implicit type signature of
 the (possibly implicit) return statement.  It's therefore available for
-type inferencing within the routine but not outside it.  If no inner type
+type inferencing within the routine but not outside it.  If no C<as> type
 is declared, it is assumed to be the same as the C<of> type, if declared.
 
     sub get_pet() of Animal {...}       # of type, obviously
     our Animal sub get_pet() {...}      # of type
-    sub get_pet() returns Animal {...}  # inner type
+    sub get_pet() as Animal {...}       # as type
 
 A value type on an array or hash specifies the type stored by each element:
 
@@ -892,18 +892,19 @@ specified, there is a postfix form as well:
     my Hash of Array of Recipe %book;           # HoHoAoRecipe
     my %book of Hash of Array of Recipe;        # same thing
 
-The C<returns> form may be used in subroutines:
+The C<as> form may be used in subroutines:
 
-    my sub get_book ($key) returns Hash of Array of Recipe {...}
+    my sub get_book ($key) as Hash of Array of Recipe {...}
 
 Alternately, the return type may be specified within the signature:
 
     my sub get_book ($key --> Hash of Array of Recipe) {...}
 
 There is a slight difference, insofar as the type inferencer will
-ignore a C<returns> but pay attention to C<< --> >> or prefix type
+ignore a C<as> but pay attention to C<< --> >> or prefix type
 declarations, also known as the C<of> type.  Only the inside of the
-subroutine pays attention to C<returns>.
+subroutine pays attention to C<as>, and essentially coerces the return
+value to the indicated type, just as if you'd coerced each return expression.
 
 You may also specify the C<of> type as the C<of> trait:
 
@@ -963,18 +964,18 @@ the same signature must unify compatibly if they have the same name:
 
 On a scoped subroutine, a return type can be specified before or after
 the name.  We call all return types "return types", but distinguish
-two kinds of return types, the C<inner> type and the C<of> type,
+two kinds of return types, the C<as> type and the C<of> type,
 because the C<of> type is normally an "official" named type and
-declares the official interface to the routine, while the C<inner>
+declares the official interface to the routine, while the C<as>
 type is merely a constraint on what may be returned by the routine
 from the routine's point of view.
 
-    our sub lay returns Egg {...}       # inner type
+    our sub lay as Egg {...}            # as type
     our Egg sub lay {...}               # of type
     our sub lay of Egg {...}            # of type
     our sub lay (--> Egg) {...}         # of type
 
-    my sub hat returns Rabbit {...}     # inner type
+    my sub hat as Rabbit {...}          # as type
     my Rabbit sub hat {...}             # of type
     my sub hat of Rabbit {...}          # of type
     my sub hat (--> Rabbit) {...}       # of type
@@ -983,14 +984,14 @@ If a subroutine is not explicitly scoped, it belongs to the current
 namespace (module, class, grammar, or package), as if it's scoped with
 the C<our> scope modifier. Any return type must go after the name:
 
-    sub lay returns Egg {...}           # inner type
+    sub lay as Egg {...}                # as type
     sub lay of Egg {...}                # of type
     sub lay (--> Egg) {...}             # of type
 
 On an anonymous subroutine, any return type can only go after the C<sub>
 keyword:
 
-    $lay = sub returns Egg {...};       # inner type
+    $lay = sub as Egg {...};            # as type
     $lay = sub of Egg {...};            # of type
     $lay = sub (--> Egg) {...};         # of type
 
@@ -1003,14 +1004,14 @@ Because they are anonymous, you can change the C<my> modifier to C<our>
 without affecting the meaning.
 
 The return type may also be specified after a C<< --> >> token within
-the signature.  This doesn't mean exactly the same thing as C<returns>.
+the signature.  This doesn't mean exactly the same thing as C<as>.
 The C<of> type is the "official" return type, and may therefore be
-used to do type inferencing outside the sub.  The C<inner> type only
+used to do type inferencing outside the sub.  The C<as> type only
 makes the return type available to the internals of the sub so that
 the C<return> statement can know its context, but outside the sub we
 don't know anything about the return value, as if no return type had
 been declared.  The prefix form specifies the C<of> type rather than
-the C<inner> type, so the return type of
+the C<as> type, so the return type of
 
     my Fish sub wanda ($x) { ... }
 
@@ -1020,15 +1021,15 @@ is known to return an object of type Fish, as if you'd said:
 
 I<not> as if you'd said
 
-    my sub wanda ($x) returns Fish { ... }
+    my sub wanda ($x) as Fish { ... }
 
-It is possible for the C<of> type to disagree with the C<inner> type:
+It is possible for the C<of> type to disagree with the C<as> type:
 
-    my Squid sub wanda ($x) returns Fish { ... }
+    my Squid sub wanda ($x) as Fish { ... }
 
 or equivalently,
 
-    my sub wanda ($x --> Squid) returns Fish { ... }
+    my sub wanda ($x --> Squid) as Fish { ... }
 
 This is not lying to yourself--it's lying to the world.  Having a
 different inner type is useful if you wish to hold your routine to
